--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"assets/images/ak47.png":["assets/images/ak47.png"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"assets/Sounds/Scream.mp3":["assets/Sounds/Scream.mp3"],"assets/images/.DS_Store":["assets/images/.DS_Store"],"assets/images/Jumpscare.pdf":["assets/images/Jumpscare.pdf"],"assets/images/ak47.png":["assets/images/ak47.png"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
